--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,33 @@
     "type": "project",
     "prefer-stable": true,
     "minimum-stability": "dev",
-    "repositories": [{
-        "type": "composer",
-        "url": "https://packages.aimeos.org/aimeoscom"
-    }],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.aimeos.org/aimeoscom"
+        },
+        {
+            "type": "composer",
+            "url": "https://packages.aimeos.org/aimeoscom"
+        },
+        {
+            "type": "path",
+            "url": "packages/*"
+        }
+    ],
     "require": {
         "php": "^7.3||^8.0",
         "composer-runtime-api": "^2.1",
+        "aimeos-extensions/ipay": "dev-master",
+        "aimeos/ai-cms-grapesjs": "2021.10.*",
+        "aimeos/ai-payments": "^2021.10",
+        "aimeos/aimeos-laravel": "2021.10.*",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "fruitcake/laravel-cors": "^2.0",
-        "aimeos/aimeos-laravel": "2021.10.*",
-        "aimeos/ai-cms-grapesjs": "2021.10.*"
+        "laravel/ui": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
