--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "aimeos/ai-cms-grapesjs": "2021.10.*",
         "aimeos/aimeos-laravel": "2021.10.*",
         "fruitcake/laravel-cors": "^2.0",
+        "giorgijorji/laravel-tbc-installment": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
